--- a/Objects/PROJET EVALBOT.htm
+++ b/Objects/PROJET EVALBOT.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\PROJET EVALBOT.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\PROJET EVALBOT.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6240002: Last Updated: Wed Dec 17 11:46:23 2025
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6240002: Last Updated: Fri Dec 19 10:45:03 2025
 <BR><P>
 <H3>Maximum Stack Usage =          0 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -15,16 +15,16 @@ Functions with no stack information
  <LI><a href="#[0]">Reset_Handler</a>
  <LI><a href="#[4]">__main</a>
  <LI><a href="#[12]">LedsInit</a>
- <LI><a href="#[17]">LedOn1</a>
- <LI><a href="#[18]">ToggleLed1</a>
- <LI><a href="#[19]">LedOn2</a>
- <LI><a href="#[1a]">ToggleLed2</a>
- <LI><a href="#[1b]">LedsOn</a>
+ <LI><a href="#[19]">LedOn1</a>
+ <LI><a href="#[1a]">ToggleLed1</a>
+ <LI><a href="#[1b]">LedOn2</a>
+ <LI><a href="#[1c]">ToggleLed2</a>
+ <LI><a href="#[1d]">LedsOn</a>
  <LI><a href="#[16]">ToggleLeds</a>
- <LI><a href="#[1c]">LedsOff</a>
- <LI><a href="#[13]">switchersInit</a>
- <LI><a href="#[15]">readSwitch1</a>
- <LI><a href="#[1d]">readSwitch2</a>
+ <LI><a href="#[18]">LedsOff</a>
+ <LI><a href="#[13]">SwitchersInit</a>
+ <LI><a href="#[15]">ReadSwitch1</a>
+ <LI><a href="#[17]">ReadSwitch2</a>
  <LI><a href="#[14]">bumpersInit</a>
  <LI><a href="#[1e]">readBumper0</a>
  <LI><a href="#[1f]">readBumper1</a>
@@ -40,8 +40,8 @@ Functions with no stack information
  <LI><a href="#[d]">MOTEUR_GAUCHE_AVANT</a>
  <LI><a href="#[e]">MOTEUR_DROIT_INVERSE</a>
  <LI><a href="#[f]">MOTEUR_GAUCHE_INVERSE</a>
- <LI><a href="#[10]">setRapidMode</a>
- <LI><a href="#[11]">setNormalMode</a>
+ <LI><a href="#[10]">SetRapidMode</a>
+ <LI><a href="#[11]">SetNormalMode</a>
  <LI><a href="#[1]">NmiSR</a>
  <LI><a href="#[2]">FaultISR</a>
  <LI><a href="#[3]">IntDefaultHandler</a>
@@ -73,15 +73,21 @@ Global Symbols
 <BR>[Address Reference Count : 1]<UL><LI> startup.o(RESET)
 </UL>
 <P><STRONG><a name="[4]"></a>__main</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, main.o(.text))
-<BR><BR>[Calls]<UL><LI><a href="#[13]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;switchersInit
-<LI><a href="#[15]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;readSwitch1
-<LI><a href="#[14]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;bumpersInit
+<BR><BR>[Calls]<UL><LI><a href="#[14]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;bumpersInit
 <LI><a href="#[16]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ToggleLeds
+<LI><a href="#[13]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SwitchersInit
+<LI><a href="#[10]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SetRapidMode
+<LI><a href="#[11]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SetNormalMode
+<LI><a href="#[17]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ReadSwitch2
+<LI><a href="#[15]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ReadSwitch1
 <LI><a href="#[5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_INIT
 <LI><a href="#[8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_GAUCHE_ON
+<LI><a href="#[9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_GAUCHE_OFF
 <LI><a href="#[d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_GAUCHE_AVANT
 <LI><a href="#[6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_DROIT_ON
+<LI><a href="#[7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_DROIT_OFF
 <LI><a href="#[b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_DROIT_AVANT
+<LI><a href="#[18]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LedsOff
 <LI><a href="#[12]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LedsInit
 </UL>
 <BR>[Called By]<UL><LI><a href="#[0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Reset_Handler
@@ -91,31 +97,35 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
-<P><STRONG><a name="[17]"></a>LedOn1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
+<P><STRONG><a name="[19]"></a>LedOn1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
 
-<P><STRONG><a name="[18]"></a>ToggleLed1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
+<P><STRONG><a name="[1a]"></a>ToggleLed1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
 
-<P><STRONG><a name="[19]"></a>LedOn2</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
+<P><STRONG><a name="[1b]"></a>LedOn2</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
 
-<P><STRONG><a name="[1a]"></a>ToggleLed2</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
+<P><STRONG><a name="[1c]"></a>ToggleLed2</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
 
-<P><STRONG><a name="[1b]"></a>LedsOn</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
+<P><STRONG><a name="[1d]"></a>LedsOn</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
 
 <P><STRONG><a name="[16]"></a>ToggleLeds</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
-<P><STRONG><a name="[1c]"></a>LedsOff</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
-
-<P><STRONG><a name="[13]"></a>switchersInit</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, switchs.o(.text))
+<P><STRONG><a name="[18]"></a>LedsOff</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
-<P><STRONG><a name="[15]"></a>readSwitch1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, switchs.o(.text))
+<P><STRONG><a name="[13]"></a>SwitchersInit</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, switchs.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
-<P><STRONG><a name="[1d]"></a>readSwitch2</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, switchs.o(.text), UNUSED)
+<P><STRONG><a name="[15]"></a>ReadSwitch1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, switchs.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
+
+<P><STRONG><a name="[17]"></a>ReadSwitch2</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, switchs.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
 
 <P><STRONG><a name="[14]"></a>bumpersInit</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, bumpers.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
@@ -135,13 +145,17 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
-<P><STRONG><a name="[7]"></a>MOTEUR_DROIT_OFF</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text), UNUSED, KEPT)
+<P><STRONG><a name="[7]"></a>MOTEUR_DROIT_OFF</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
 
 <P><STRONG><a name="[8]"></a>MOTEUR_GAUCHE_ON</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
-<P><STRONG><a name="[9]"></a>MOTEUR_GAUCHE_OFF</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text), UNUSED, KEPT)
+<P><STRONG><a name="[9]"></a>MOTEUR_GAUCHE_OFF</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
 
 <P><STRONG><a name="[a]"></a>MOTEUR_DROIT_ARRIERE</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text), UNUSED, KEPT)
 
@@ -159,9 +173,13 @@ Global Symbols
 
 <P><STRONG><a name="[f]"></a>MOTEUR_GAUCHE_INVERSE</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text), UNUSED, KEPT)
 
-<P><STRONG><a name="[10]"></a>setRapidMode</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text), UNUSED, KEPT)
+<P><STRONG><a name="[10]"></a>SetRapidMode</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
 
-<P><STRONG><a name="[11]"></a>setNormalMode</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text), UNUSED, KEPT)
+<P><STRONG><a name="[11]"></a>SetNormalMode</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
 
 <P><STRONG><a name="[21]"></a>__use_two_region_memory</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, heapauxi.o(.text), UNUSED)
 
