--- a/Objects/PROJET EVALBOT.htm
+++ b/Objects/PROJET EVALBOT.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [.\Objects\PROJET EVALBOT.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image .\Objects\PROJET EVALBOT.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6240002: Last Updated: Fri Dec 19 10:47:34 2025
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 6240002: Last Updated: Fri Dec 19 11:23:03 2025
 <BR><P>
 <H3>Maximum Stack Usage =          0 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -15,20 +15,20 @@ Functions with no stack information
  <LI><a href="#[0]">Reset_Handler</a>
  <LI><a href="#[4]">__main</a>
  <LI><a href="#[12]">LedsInit</a>
- <LI><a href="#[19]">LedOn1</a>
- <LI><a href="#[1a]">ToggleLed1</a>
- <LI><a href="#[1b]">LedOn2</a>
- <LI><a href="#[1c]">ToggleLed2</a>
- <LI><a href="#[1d]">LedsOn</a>
+ <LI><a href="#[1a]">LedOn1</a>
+ <LI><a href="#[1b]">ToggleLed1</a>
+ <LI><a href="#[1c]">LedOn2</a>
+ <LI><a href="#[1d]">ToggleLed2</a>
+ <LI><a href="#[1e]">LedsOn</a>
  <LI><a href="#[16]">ToggleLeds</a>
- <LI><a href="#[18]">LedsOff</a>
+ <LI><a href="#[19]">LedsOff</a>
  <LI><a href="#[13]">SwitchersInit</a>
  <LI><a href="#[15]">ReadSwitch1</a>
- <LI><a href="#[17]">ReadSwitch2</a>
+ <LI><a href="#[18]">ReadSwitch2</a>
  <LI><a href="#[14]">bumpersInit</a>
- <LI><a href="#[1e]">readBumper0</a>
- <LI><a href="#[1f]">readBumper1</a>
- <LI><a href="#[20]">readBumpers0_1</a>
+ <LI><a href="#[1f]">readBumper0</a>
+ <LI><a href="#[20]">readBumper1</a>
+ <LI><a href="#[17]">readBumpers0_1</a>
  <LI><a href="#[5]">MOTEUR_INIT</a>
  <LI><a href="#[6]">MOTEUR_DROIT_ON</a>
  <LI><a href="#[7]">MOTEUR_DROIT_OFF</a>
@@ -73,21 +73,24 @@ Global Symbols
 <BR>[Address Reference Count : 1]<UL><LI> startup.o(RESET)
 </UL>
 <P><STRONG><a name="[4]"></a>__main</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, main.o(.text))
-<BR><BR>[Calls]<UL><LI><a href="#[14]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;bumpersInit
+<BR><BR>[Calls]<UL><LI><a href="#[17]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;readBumpers0_1
+<LI><a href="#[14]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;bumpersInit
 <LI><a href="#[16]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ToggleLeds
 <LI><a href="#[13]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SwitchersInit
 <LI><a href="#[10]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SetRapidMode
 <LI><a href="#[11]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SetNormalMode
-<LI><a href="#[17]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ReadSwitch2
+<LI><a href="#[18]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ReadSwitch2
 <LI><a href="#[15]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ReadSwitch1
 <LI><a href="#[5]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_INIT
 <LI><a href="#[8]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_GAUCHE_ON
 <LI><a href="#[9]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_GAUCHE_OFF
 <LI><a href="#[d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_GAUCHE_AVANT
+<LI><a href="#[c]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_GAUCHE_ARRIERE
 <LI><a href="#[6]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_DROIT_ON
 <LI><a href="#[7]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_DROIT_OFF
 <LI><a href="#[b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_DROIT_AVANT
-<LI><a href="#[18]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LedsOff
+<LI><a href="#[a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MOTEUR_DROIT_ARRIERE
+<LI><a href="#[19]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LedsOff
 <LI><a href="#[12]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;LedsInit
 </UL>
 <BR>[Called By]<UL><LI><a href="#[0]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Reset_Handler
@@ -97,21 +100,21 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
-<P><STRONG><a name="[19]"></a>LedOn1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
+<P><STRONG><a name="[1a]"></a>LedOn1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
 
-<P><STRONG><a name="[1a]"></a>ToggleLed1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
+<P><STRONG><a name="[1b]"></a>ToggleLed1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
 
-<P><STRONG><a name="[1b]"></a>LedOn2</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
+<P><STRONG><a name="[1c]"></a>LedOn2</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
 
-<P><STRONG><a name="[1c]"></a>ToggleLed2</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
+<P><STRONG><a name="[1d]"></a>ToggleLed2</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
 
-<P><STRONG><a name="[1d]"></a>LedsOn</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
+<P><STRONG><a name="[1e]"></a>LedsOn</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text), UNUSED)
 
 <P><STRONG><a name="[16]"></a>ToggleLeds</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
-<P><STRONG><a name="[18]"></a>LedsOff</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text))
+<P><STRONG><a name="[19]"></a>LedsOff</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, leds.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
@@ -123,7 +126,7 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
-<P><STRONG><a name="[17]"></a>ReadSwitch2</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, switchs.o(.text))
+<P><STRONG><a name="[18]"></a>ReadSwitch2</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, switchs.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
@@ -131,11 +134,13 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
-<P><STRONG><a name="[1e]"></a>readBumper0</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, bumpers.o(.text), UNUSED)
+<P><STRONG><a name="[1f]"></a>readBumper0</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, bumpers.o(.text), UNUSED)
 
-<P><STRONG><a name="[1f]"></a>readBumper1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, bumpers.o(.text), UNUSED)
+<P><STRONG><a name="[20]"></a>readBumper1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, bumpers.o(.text), UNUSED)
 
-<P><STRONG><a name="[20]"></a>readBumpers0_1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, bumpers.o(.text), UNUSED)
+<P><STRONG><a name="[17]"></a>readBumpers0_1</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, bumpers.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
 
 <P><STRONG><a name="[5]"></a>MOTEUR_INIT</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
@@ -157,13 +162,17 @@ Global Symbols
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
-<P><STRONG><a name="[a]"></a>MOTEUR_DROIT_ARRIERE</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text), UNUSED, KEPT)
+<P><STRONG><a name="[a]"></a>MOTEUR_DROIT_ARRIERE</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
 
 <P><STRONG><a name="[b]"></a>MOTEUR_DROIT_AVANT</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
 </UL>
 
-<P><STRONG><a name="[c]"></a>MOTEUR_GAUCHE_ARRIERE</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text), UNUSED, KEPT)
+<P><STRONG><a name="[c]"></a>MOTEUR_GAUCHE_ARRIERE</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text))
+<BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
+</UL>
 
 <P><STRONG><a name="[d]"></a>MOTEUR_GAUCHE_AVANT</STRONG> (Thumb, 0 bytes, Stack size unknown bytes, rk_config_moteur.o(.text))
 <BR><BR>[Called By]<UL><LI><a href="#[4]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__main
